// GBS POS & CMS Database Schema
// Paste this into https://dbdiagram.io/d

Table users {
  id serial [pk, increment]
  username varchar(50) [unique, not null]
  password_hash varchar(255) [not null]
  name varchar(100)
  role varchar(20) [not null, note: "CHECK (role IN ('ADMIN', 'CASHIER'))"]
  created_at timestamptz [not null, default: `NOW()`]
  updated_at timestamptz [not null, default: `NOW()`]

  indexes {
    username [unique]
  }

  Note: "Shared between POS and CMS backends. Both modules have identical User models."
}

Table products {
  id serial [pk, increment]
  name varchar(200) [not null]
  price decimal(12,2) [not null, note: "CHECK (price >= 0)"]
  category varchar(100) [not null]
  image_url varchar(500)
  store_type varchar(20) [not null, note: "CHECK (store_type IN ('RETAIL', 'FNB', 'OUTFIT'))"]
  created_at timestamptz [not null, default: `NOW()`]
  updated_at timestamptz [not null, default: `NOW()`]

  indexes {
    store_type
    category
  }
}

Table orders {
  id varchar(32) [pk, note: "client-generated UUID"]
  subtotal decimal(12,2) [not null]
  tax decimal(12,2) [not null]
  total decimal(12,2) [not null]
  payment_method varchar(20) [not null, note: "CHECK (payment_method IN ('CASH', 'CARD', 'QRIS'))"]
  cash_received decimal(12,2)
  change_amount decimal(12,2)
  timestamp bigint [not null, note: "Unix milliseconds"]
  is_voided boolean [not null, default: false]
  is_settled boolean [not null, default: false]
  transaction_id varchar(100) [note: "Neurogine"]
  approval_code varchar(50) [note: "Neurogine"]
  entry_mode varchar(20) [note: "Neurogine: CONTACTLESS, CHIP, SWIPE"]
  masked_account varchar(50) [note: "Neurogine"]
  acq_mid varchar(50) [note: "Neurogine"]
  acq_tid varchar(50) [note: "Neurogine"]
  pos_message_id varchar(100) [note: "Neurogine"]
  bank_name varchar(50) [note: "e.g. BCA, BNI, Mandiri"]
  store_type varchar(20)
  terminal_id varchar(32)
  void_reason varchar(255)
  voided_by varchar(50)
  voided_at timestamptz
  created_at timestamptz [not null, default: `NOW()`]
  updated_at timestamptz [not null, default: `NOW()`]

  indexes {
    timestamp [name: "idx_orders_timestamp"]
    is_settled [name: "idx_orders_is_settled"]
    is_voided [name: "idx_orders_is_voided"]
    store_type [name: "idx_orders_store_type"]
    terminal_id [name: "idx_orders_terminal_id"]
    transaction_id [name: "idx_orders_transaction_id"]
  }
}

Table order_items {
  id serial [pk, increment]
  order_id varchar(32) [not null]
  product_id int [not null]
  product_name varchar(200) [not null]
  product_price decimal(12,2) [not null]
  qty int [not null, note: "CHECK (qty > 0)"]
  subtotal decimal(12,2) [not null]

  indexes {
    order_id [name: "idx_order_items_order_id"]
  }
}

Table settlements {
  id varchar(64) [pk, note: "SETTLE-<unix_timestamp_millis>"]
  timestamp bigint [not null]
  batch_count int [not null]
  total_amount decimal(12,2) [not null]
  card_total decimal(12,2) [not null]
  qris_total decimal(12,2) [not null]
  cash_total decimal(12,2) [not null]
  status varchar(20) [not null, note: "CHECK (status IN ('SUCCESS', 'FAILED'))"]
  store_type varchar(20)
  terminal_id varchar(32)
  created_at timestamptz [not null, default: `NOW()`]

  indexes {
    timestamp [name: "idx_settlements_timestamp"]
  }
}

Table ads {
  id serial [pk, increment]
  name varchar(200) [not null]
  filename varchar(255) [not null]
  storage_path varchar(500) [not null]
  file_size bigint [not null]
  mime_type varchar(50) [not null]
  duration_seconds int
  store_types json [not null, note: "e.g. ['RETAIL'], stored as JSON text"]
  playlist_order int [not null, default: 0]
  is_active boolean [not null, default: true]
  start_date date
  end_date date
  start_time time
  end_time time
  created_by int [not null]
  created_at timestamptz [not null, default: `NOW()`]
  updated_at timestamptz [not null, default: `NOW()`]

  indexes {
    is_active [name: "idx_ads_is_active"]
    (start_date, end_date) [name: "idx_ads_dates"]
  }

  Note: "StoreTypes uses gorm:'serializer:json' (JSON text), not PostgreSQL arrays. Query with store_types LIKE '%RETAIL%'."
}

Table ad_play_logs {
  id serial [pk, increment]
  ad_id int [not null]
  terminal_id varchar(32)
  store_type varchar(20) [not null]
  played_at timestamptz [not null, default: `NOW()`]

  indexes {
    ad_id [name: "idx_ad_play_logs_ad_id"]
    played_at [name: "idx_ad_play_logs_played_at"]
  }
}

// Relationships
Ref: orders.id < order_items.order_id [delete: cascade]
Ref: users.id < ads.created_by
Ref: ads.id < ad_play_logs.ad_id
